# My-SM4

./: CMakeLists.txt  README.MD  git-my-sm4.code-workspace
include/: sm4.h  sm4avx.h  sm4base.h  sm4kdf.h  sm4round.h
src/: sm4.c  sm4base.c  sm4kdf.c  sm4round.c
src/sm4/: sm4.c  sm4kdf.c
src/sm4avx/: sm4avx.c
test/codetest/: avxtest.c  basetest.c
test/functest/: kdftest.c  roundtest.c  sm4test.c  sm4test_avx.c  speedtest.c  speedtest_avx.c
